--- a/Bootstrap/Starter/app.css
+++ b/Bootstrap/Starter/app.css
@@ -2,6 +2,20 @@ body {
   background: #f5d9d5;
   font-family: "Nunito", sans-serif;
 }
+.content {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.special h2 {
+  color: #ea1c2c;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+.special p {
+  color: #f498b8;
+  font-size: 1.12rem;
+  line-height: 2;
+}
 #mainNavbar {
   font-size: 1.5rem;
   font-weight: 300;
@@ -22,6 +36,10 @@ body {
 #headingGroup h1 {
   font-weight: 300;
   font-size: 4rem;
+}
+.navbar.scrolled {
+  background: rgb(222, 192, 222);
+  transition: background 300ms;
 }
 @media (max-width: 1300px) {
   #headingGroup h1 {
