--- a/Express.js/views/home.ejs
+++ b/Express.js/views/home.ejs
@@ -6,7 +6,7 @@
     <title>Templating With Express</title>
   </head>
   <body>
-    <h1>Welcome Home</h1>
+    <h1>Welcome Home <%= 8+94+78 %></h1>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae consectetur
       eaque mollitia at error reprehenderit? Et laborum nam expedita excepturi
