--- a/Express.js/views/random.ejs
+++ b/Express.js/views/random.ejs
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>Your Random Number is <%= randomNumber %></h1>
+    <!-- we can use JS using the following syntax to control the flow -->
+    <% if(randomNumber%2===0){ %>
+    <h2>This is an even number</h2>
+    <% } else{ %>
+    <h2>This is an odd number</h2>
+    <% } %>
+    <!-- Alternate way using embedded js-->
+    <h2>This is an <%= randomNumber%2===0 ? 'even':'odd' %> number</h2>
   </body>
 </html>
