--- a/Express.js/views/subreddit.ejs
+++ b/Express.js/views/subreddit.ejs
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>r/<%= subreddit %></title>
+    <title>r/<%= name %></title>
   </head>
   <body>
-    <h1>Welcome to r/<%= subreddit %></h1>
+    <h1>Welcome to r/<%= name %></h1>
+    <h2><%= description %></h2>
+    <p><%= subscribers %> Subscribers</p>
+    <hr />
+    <%for(post of posts){%>
+    <article>
+      <p><%= post.title %> - <b><%= post.author%></b></p>
+      <% if(post.img){%>
+      <img src="<%= post.img %>" alt="" />
+      <%}%>
+    </article>
+    <%}%>
   </body>
 </html>
