Bootstrap with Templating

--- a/Express.js/Templating/views/subreddit.ejs
+++ b/Express.js/Templating/views/subreddit.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>r/<%= name %></title>
+    <link rel="stylesheet" href="/app.css" />
+    <!-- path to the css file is kinda weird -->
   </head>
   <body>
     <h1>Welcome to r/<%= name %></h1>
