--- a/Express.js/Bootstrap-with-templating/views/home.ejs
+++ b/Express.js/Bootstrap-with-templating/views/home.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Templating With Express</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>Welcome Home</h1>
