--- a/Express.js/Bootstrap-with-templating/views/subreddit.ejs
+++ b/Express.js/Bootstrap-with-templating/views/subreddit.ejs
@@ -1,53 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>r/<%= name %></title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- path to the css file is kinda weird -->
-  </head>
+<%- include('partials/head') %>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Express Demo</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/random">Random Number</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/r/soccer">Soccer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/r/chickens">Chickens</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/r/mightyharvest">Mighty Harvest</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <%- include('partials/navbar') %> 
+    <!-- partials are used to reduce code redundancy, by including the file we can write once and use it multiple times  -->
     <h1>Welcome to r/<%= name %></h1>
     <h2><%= description %></h2>
     <p><%= subscribers %> Subscribers</p>
