Create and read functionality added

--- a/RESTful-routes/views/comments/new.ejs
+++ b/RESTful-routes/views/comments/new.ejs
@@ -23,6 +23,7 @@
         <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
       </section>
       <button>Submit</button>
+      <a href="/comments"> Home</a>
     </form>
   </body>
 </html>
