added update functionality

--- a/RESTful-routes/views/comments/show.ejs
+++ b/RESTful-routes/views/comments/show.ejs
@@ -9,5 +9,6 @@
     <h1>Comment ID: <%= comment.id %></h1>
     <h2><%= comment.comment %> - <%= comment.username%></h2>
     <a href="/comments">Home</a>
+    <a href="/comments/<%=comment.id%>/edit">Edit comment</a>
   </body>
 </html>
