--- a/RESTful-routes/views/comments/show.ejs
+++ b/RESTful-routes/views/comments/show.ejs
@@ -10,5 +10,8 @@
     <h2><%= comment.comment %> - <%= comment.username%></h2>
     <a href="/comments">Home</a>
     <a href="/comments/<%=comment.id%>/edit">Edit comment</a>
+    <form method="post" action="/comments/<%= comment.id  %>/?_method=DELETE">
+      <button>Delete</button>
+    </form>
   </body>
 </html>
