Updating and Deleting using Mongoose and Express

--- a/Mongoose-Express/views/products/show.ejs
+++ b/Mongoose-Express/views/products/show.ejs
@@ -12,5 +12,9 @@
       <li>Category: <%= product.category %></li>
     </ul>
     <a href="/products">Go Back</a>
+    <a href="/products/<%=product._id%>/edit">Edit </a>
+    <form action="/products/<%=product._id%>?_method=DELETE" method="POST">
+      <button>Delete</button>
+    </form>
   </body>
 </html>
