Filtering using Express

--- a/Mongoose-Express/views/products/new.ejs
+++ b/Mongoose-Express/views/products/new.ejs
@@ -19,6 +19,7 @@
         <% } %>
       </select>
       <button>Submit</button>
+      <a href="/products">Home</a>
     </form>
   </body>
 </html>
